[project]
name = "ai-delivery-agent"
version = "0.1.0"
description = "MVP multi-agent system from requirement to proposed code change"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
ai-delivery-agent = "ai_delivery_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
